--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -44,6 +44,7 @@ body {
 	}
 }
 
+// background radial gradient
 .circle {
 	position: fixed;
 	z-index: -1;
@@ -87,5 +88,66 @@ body {
 	}
 	100% {
 		transform: scale(1);
+	}
+}
+
+// main title text
+.title {
+	font-family: Montserrat;
+	font-weight: 800;
+	color: $white-color;
+	font-size: 28px;
+	line-height: 34px;
+	@media (min-width: $breakpoint1366) {
+		font-size: 50px;
+		line-height: 61px;
+	}
+	@media (min-width: $breakpoint1920) {
+		font-size: 80px;
+		line-height: 98px;
+	}
+}
+
+.subtitle {
+	font-family: Montserrat;
+	font-weight: 700;
+	color: $white-color;
+	font-size: 24px;
+	line-height: 28px;
+	@media (min-width: $breakpoint768) {
+		font-size: 40px;
+		line-height: 59px;
+	}
+	@media (min-width: $breakpoint1366) {
+		font-size: 48px;
+		line-height: 58px;
+	}
+	@media (min-width: $breakpoint1920) {
+		font-size: 60px;
+		line-height: 73px;
+	}
+}
+
+.basic-button {
+	background: linear-gradient(90deg, #F5263C 0%, #6A129F 100%);
+	border-radius: 5px;
+	display: inline-block;
+	color: $white-color;
+	font-weight: 900;
+	font-size: 16px;
+	line-height: 19px;
+	padding: 15px 52px;
+	cursor: pointer;
+	text-transform: uppercase;
+	@media (min-width: $breakpoint768) {
+		padding: 15px 49px;
+	}
+	@media (min-width: $breakpoint1366) {
+		padding: 15px 52px;
+	}
+	@media (min-width: $breakpoint1920) {
+		font-size: 24px;
+		line-height: 28px;
+		padding: 19px 65px;
 	}
 }
