--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -4,7 +4,7 @@ body {
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 18px;
-	height: 4000px;
+	// height: 4000px;
 	&.locked {
 		overflow: hidden;
 	}
@@ -29,7 +29,7 @@ body {
 	@media (min-width: $breakpoint768) {
 		max-width: 720px;	
 	}
-	@media (min-width: $breakpoint1366) {
+	@media (min-width: $breakpoint1310) {
 		max-width: 1125px;
 	}
 	@media (min-width: $breakpoint1920) {
@@ -67,7 +67,7 @@ body {
 			bottom: -85vw;
 			right: -35vw;
 		}
-		@media (min-width: $breakpoint1366) {
+		@media (min-width: $breakpoint1310) {
 			width: 1755px;
 			height: 1380px;
 			bottom: -70vw;
@@ -98,7 +98,7 @@ body {
 	color: $white-color;
 	font-size: 28px;
 	line-height: 34px;
-	@media (min-width: $breakpoint1366) {
+	@media (min-width: $breakpoint1310) {
 		font-size: 50px;
 		line-height: 61px;
 	}
@@ -118,7 +118,7 @@ body {
 		font-size: 40px;
 		line-height: 59px;
 	}
-	@media (min-width: $breakpoint1366) {
+	@media (min-width: $breakpoint1310) {
 		font-size: 48px;
 		line-height: 58px;
 	}
@@ -142,7 +142,7 @@ body {
 	@media (min-width: $breakpoint768) {
 		padding: 15px 49px;
 	}
-	@media (min-width: $breakpoint1366) {
+	@media (min-width: $breakpoint1310) {
 		padding: 15px 52px;
 	}
 	@media (min-width: $breakpoint1920) {
