add swiper fix tabs

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,11 @@
 @import "header";
 @import "platform";
 @import "power";
+@import "gaming";
+
+@import '../../node_modules/swiper/swiper.scss';
+// @import '../../node_modules/swiper/modules/navigation/navigation.scss';
+@import '../../node_modules/swiper/modules/pagination/pagination.scss';
+
+@import "unlimited";
+
