--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -151,3 +151,53 @@ body {
 		padding: 19px 65px;
 	}
 }
+
+.btn-with-icon {
+	display: inline-flex;
+	position: relative;
+	padding: 10px 28px;
+	cursor: pointer;
+	border-radius: 5px;
+	// @media (min-width: $breakpoint1920) {
+	// 	padding: 17px 55px;
+	// }
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		border-radius: 5px;
+		border: 2px solid transparent;
+		background: linear-gradient(rgb(32, 149, 217), rgb(92, 53, 238)) border-box;
+		-webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+		-webkit-mask-composite: destination-out;
+		mask-composite: exclude;
+	}
+	&__icon {
+		margin-right: 17px;
+		display: flex;
+		align-items: center;
+		svg {
+			width: 25px;
+			height: 25px;
+		}
+	}
+
+	&__name {
+		color: $white-color;
+		span {
+			display: block;
+			font-size: 9px;
+			line-height: 11px;
+			font-weight: 500;
+		}
+
+		span + span {
+			font-size: 16px;
+			line-height: 19px;
+			font-weight: 700;
+		}
+	}
+}
