--- a/src/scss/_unlimited.scss
+++ b/src/scss/_unlimited.scss
@@ -49,6 +49,39 @@
 				180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%
 			) 1 1 0;
 	}
+
+	&__footer {
+		padding: 46px 0;
+		background: linear-gradient(90deg, rgba(255, 255, 255, 0) 1.37%, rgba(255, 255, 255, 0.09) 50.85%, rgba(255, 255, 255, 0) 100%);
+	}
+
+	&__footer-list {
+		font-family: Montserrat;
+		font-weight: 700;
+		max-width: 1200px;
+		font-size: 20px;
+		margin: 0 auto;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__footer-item {
+		display: flex;
+		align-items: center;
+	}
+
+	&__footer-item-img {
+		margin-right: 25px;
+	}
+
+	&__footer-item-txt {
+		span {
+			display: block;
+		}
+		span + span {
+			font-weight: 400;
+		}
+	}
 }
 
 
@@ -224,4 +257,6 @@
 			}
 		}
 }
+
+
 
