--- a/src/scss/_plan.scss
+++ b/src/scss/_plan.scss
@@ -18,6 +18,8 @@
 		max-width: 735px;
 		margin: 0 auto;
 		display: flex;
+		padding-bottom: 57px;
+		padding-top: 37px;
 	}
 
 	&__card {
@@ -29,9 +31,8 @@
 				position: absolute;
 				top: 0;
 				left: 0;
-				width: 1px;
+				width: 2px;
 				height: 100%;
-				// background: linear-gradient(90deg, rgba(155, 153, 173, 0) 0%, rgba(155, 153, 173, 1) 50%, rgba(155, 153, 173, 0) 100%);
 				background: url('@img/line.svg') 0 0/cover no-repeat;
 			}
 		}
@@ -39,6 +40,7 @@
 
 	&__service {
 		text-align: center;
+		margin-top: 25px;
 	}
 
 	&__subscrible {
@@ -98,26 +100,66 @@
 
 //card
 .plan-card {
-
+	text-align: center;
+	&:last-child {
+		.plan-card__title-chip {
+			padding: 4px 43px;
+			background: linear-gradient(90deg, #2095D9 0%, #5C35EE 100%);
+		}
+	}
 	&__title {
+		font-weight: 900;
+		text-transform: uppercase;
+		margin-bottom: 47px;
 	}
 
 	&__title-title {
+		font-size: 40px;
+		margin-bottom: 10px;
 	}
 
 	&__title-chip {
+		font-size: 16px;
+		line-height: 19px;
+		display: inline-block;
+		padding: 4px 19px;
+		background: rgba(255, 255, 255, 0.3);
+		border-radius: 50px;
 	}
 
 	&__price {
+		margin-bottom: 65px;
 	}
 
 	&__price-price {
+		font-family: Montserrat;
+		font-weight: 700;
+		font-size: 50px;
+		margin-bottom: 10px;
+		sup {
+			font-size: 24px;
+			font-weight: 400;
+		}
 	}
 
 	&__price-month {
+		font-weight: 900;
+		font-size: 20px;
+		text-transform: uppercase;
 	}
 
 	&__footer {
+		font-size: 14px;
+		line-height: 16px;
+		sup {
+			font-size: 12px;
+			margin-right: 2px;
+		}
+		span {
+			font-weight: 500;
+			font-size: 18px;
+			margin-right: 5px;
+		}
 	}
 }
 
