--- a/src/scss/_platform.scss
+++ b/src/scss/_platform.scss
@@ -12,21 +12,38 @@
 	}
 
 	&__title {
-		margin-bottom: 40px;
+		margin-bottom: 30px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 40px;
+		}
 	}
 
 	&__cards {
 		display: flex;
 		font-weight: 500;
-		margin-bottom: 40px;
+		margin-bottom: 30px;
+		font-size: 14px;
+		line-height: 16px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 18px;
+			line-height: 24px;
+			margin-bottom: 40px;
+		}
 	}
 
 	&__cards-item {
-		padding: 20px 38px 21px 25px;
+		padding: 12px 12px 13px 17px;
+		min-width: 165px;
 		background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1.52%, rgba(255, 255, 255, 0) 93.94%);
 		position: relative;
+		@media (min-width: $breakpoint1920) {
+			padding: 20px 38px 21px 25px;
+		}
 		&:first-child {
-			margin-right: 50px;
+			margin-right: 20px;
+			@media (min-width: $breakpoint1920) {
+				margin-right: 50px;
+			}
 		}
 		&::before {
 			content: '';
@@ -40,41 +57,69 @@
 	}
 
 	&__price {
-		margin-bottom: 40px;
+		margin-bottom: 20px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 40px;
+		}
 	}
 
 	&__price-title {
 		font-family: Montserrat;
 		font-weight: 900;
+		font-size: 14px;
+		line-height: 19px;
 		text-transform: uppercase;
 		margin-bottom: 6px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 18px;
+			line-height: 24px;
+		}
 	}
 
 	&__price-price {
 		font-family: Montserrat;
 		font-weight: 600;
-		font-size: 18px;
+		font-size: 14px;
+		line-height: 17px;
 		text-transform: uppercase;
+		@media (min-width: $breakpoint1920) {
+			font-size: 18px;
+			line-height: 24px;
+		}
 		span {
-			font-size: 50px;
+			font-size: 30px;
 			font-weight: 700;
+			margin-right: 6px;
+			@media (min-width: $breakpoint1920) {
+				font-size: 50px;
+				margin-right: 0;
+			}
 		}
 		sup {
-			font-size: 20px;
+			font-size: 14px;
 			margin-right: 5px;
+			@media (min-width: $breakpoint1920) {
+				font-size: 20px;
+			}
 		}
 		span + span {
 			color: #FF3E3E;
 			text-decoration: line-through;
-			font-size: 24px;
+			font-size: 18px;
+			@media (min-width: $breakpoint1920) {
+				font-size: 24px;
+			}
 		}
 	}
 
 	&__price-subscription {
 		font-family: Roboto;
 		font-weight: 400;
-		font-size: 16px;
+		font-size: 12px;
 		color: #9b99ad;
+		@media (min-width: $breakpoint1920) {
+			font-size: 16px;
+		}
 	}
 
 	&__button {
@@ -84,8 +129,11 @@
 	}
 
 	&__image {
-		max-width: 924px;
+		max-width: 645px;
 		width: 100%;
+		@media (min-width: $breakpoint1920) {
+			max-width: 924px;
+		}
 		img {
 			width: 100%;
 			height: auto;
