--- a/src/scss/_power.scss
+++ b/src/scss/_power.scss
@@ -1,9 +1,16 @@
 .power {
-	padding-bottom: 150px;
+	padding-bottom: 60px;
+	padding-top: 60px;
+	@media (min-width: $breakpoint1920) {
+		padding-bottom: 150px;
+		padding-top: 160px;
+	}
 	&__title {
-		margin-bottom: 100px;
-		margin-top: 160px;
+		margin-bottom: 80px;
 		text-align: center;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 100px;
+		}
 	}
 
 	&__container {
@@ -14,24 +21,44 @@
 	&__image {
 		max-width: 100%;
 		width: 50%;
+	}
+
+	&__image-box {
+		max-width: 645px;
+		width: 150%;
+		@media (min-width: $breakpoint1920) {
+			max-width: 1122px;
+		}
 		img {
 			display: inline-block;
-			margin-left: calc(-50vw + 805px);
+			width: 100%;
+			margin-left: calc(-50vw + 570px);
+			@media (min-width: $breakpoint1920) {
+				margin-left: calc(-50vw + 805px);
+			}
 		}
 	}
 
 
 	&__list {
 		width: 50%;
-		max-width: 662px;
-		margin-top: 80px;
+		max-width: 580px;
+		margin-top: 40px;
+		@media (min-width: $breakpoint1920) {
+			max-width: 662px;
+			margin-top: 80px;
+		}
 	}
 
 	&__item {
-		padding-left: 150px;
+		padding-left: 130px;
 		color: $white-color;
 		position: relative;
-		margin-bottom: 60px;
+		margin-bottom: 50px;
+		@media (min-width: $breakpoint1920) {
+			padding-left: 150px;
+			margin-bottom: 60px;
+		}
 		&:last-child {
 			margin-bottom: 0px;
 		}
@@ -40,28 +67,43 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 120px;
-			height: 85px;
-			background: url('@img/power_devices.svg') no-repeat;
+			width: 100px;
+			height: 67px;
+			background: url('@img/power_devices.svg') 0 0/cover no-repeat;
+			@media (min-width: $breakpoint1920) {
+				width: 120px;
+				height: 85px;
+			}
 		}
 	}
 	&__item + .power__item {
 		&::before {
-			background: url('@img/power_downloads_1.svg') no-repeat;
+			background: url('@img/power_downloads_1.svg') 0 0/cover no-repeat;
+			@media (min-width: $breakpoint1920) {
+				height: 80px;
+			}
 		}
 	}
 	&__item + .power__item + .power__item {
 		&::before {
-			background: url('@img/power_downloads_2.svg') no-repeat;
+			background: url('@img/power_downloads_2.svg') 0 0/cover no-repeat;
+			@media (min-width: $breakpoint1920) {
+				height: 82px;
+			}
 		}
 	}
 
 	&__item-title {
 		font-family: Montserrat;
 		font-weight: 700;
-		font-size: 36px;
-		line-height: 44px;
-		margin-bottom: 18px;	
+		font-size: 24px;
+		line-height: 29px;
+		margin-bottom: 15px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 36px;
+			line-height: 44px;
+			margin-bottom: 18px;
+		}
 	}
 
 	&__item-content {
@@ -72,10 +114,20 @@
 .content {
 
 	&__platform {
-		margin-top: 22px;
+		margin-top: 15px;
+		@media (min-width: $breakpoint1920) {
+			margin-top: 22px;
+		}
 	}
 
 	&__note {
-		margin-top: 20px;
+		margin-top: 15px;
+		font-size: 12px;
+		line-height: 14px;
+		@media (min-width: $breakpoint1920) {
+			margin-top: 20px;
+			font-size: 18px;
+			line-height: 21px;
+		}
 	}
 }
