--- a/src/scss/_begin.scss
+++ b/src/scss/_begin.scss
@@ -1,30 +1,48 @@
 .begin {
-	padding-top: 150px;
-	padding-bottom: 70px;
+	padding-top: 90px;
+	padding-bottom: 25px;
+	@media (min-width: $breakpoint1920) {
+		padding-top: 150px;
+		padding-bottom: 70px;
+	}
 	&__inner {
 		display: flex;
 		align-items: center;
 	}
 
 	&__content {
-		flex: 0 0 37%;
+		flex: 0 0 42%;
 	}
 
 	&__title {
-		margin-right: -85px;
-		margin-bottom: 63px;
+		margin-right: -30px;
+		margin-bottom: 40px;
+		@media (min-width: $breakpoint1920) {
+			margin-right: -150px;
+			margin-bottom: 63px;
+		}
 	}
 
 	&__list {
 		color: $white-color;
 		font-weight: 700;
-		margin-bottom: 60px;
+		margin-bottom: 40px;
+		font-size: 16px;
+		line-height: 19px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 18px;
+			line-height: 24px;
+			margin-bottom: 60px;
+		}
 	}
 
 	&__item {
 		display: flex;
 		align-items: center;
-		margin-bottom: 40px;
+		margin-bottom: 30px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 40px;
+		}
 		&:last-child {
 			margin-bottom: 0;
 		}
@@ -40,7 +58,7 @@
 	}
 
 	&__box {
-		flex: 0 0 63%;
+		flex: 0 0 58%;
 	}
 
 	&__image {
