--- a/src/scss/_plan.scss
+++ b/src/scss/_plan.scss
@@ -1,26 +1,44 @@
 .plan {
 	position: relative;
-	padding: 160px 0 140px 0;
+	padding: 93px 0 90px 0;
 	color: $white-color;
+	@media (min-width: $breakpoint1920) {
+		padding: 160px 0 140px 0;
+	}
 	&__title {
 		text-align: center;
-		margin-bottom: 60px;
+		margin-bottom: 40px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 60px;
+		}
 	}
 
 	&__title-title {
-		margin-bottom: 20px;
+		margin-bottom: 5px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__title-txt {
+		font-size: 16px;
+		line-height: 24px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 24px;
+		}
 	}
 
 	&__cards {
-		max-width: 735px;
+		max-width: 480px;
 		margin: 0 auto;
 		display: flex;
-		padding-bottom: 57px;
-		padding-top: 37px;
+		padding: 0;
 		position: relative;
+		@media (min-width: $breakpoint1920) {
+			max-width: 735px;
+			padding-bottom: 57px;
+			padding-top: 37px;
+		}
 		&::before {
 			content: '';
 			position: absolute;
@@ -39,11 +57,17 @@
 
 	&__service {
 		text-align: center;
-		margin-top: 25px;
+		margin-top: 42px;
+		@media (min-width: $breakpoint1920) {
+			margin-top: 25px;
+		}
 	}
 
 	&__subscrible {
-		margin-bottom: 25px;
+		margin-bottom: 40px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 25px;
+		}
 	}
 
 	&__subscrible-btn {
@@ -61,34 +85,52 @@
 		top: 0;
 		left: 0;
 		height: 100%;
-		max-width: 28%;
+		max-width: 24%;
 		width: 100%;
 		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 100%);
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		@media (min-width: $breakpoint1920) {
+			max-width: 28%;
+		}
 	}
 
 	&__features {
-		max-width: 390px;
+		max-width: 260px;
 		margin: 0 auto;
 		font-family: Montserrat;
+		@media (min-width: $breakpoint1920) {
+			max-width: 390px;
+		}
 	}
 
 	&__features-title {
 		font-weight: 700;
-		font-size: 24px;
-		margin-bottom: 20px;
+		font-size: 14px;
+		margin-bottom: 12px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 24px;
+			margin-bottom: 20px;
+		}
 	}
 
 	&__features-list {
 		font-weight: 400;
-		font-size: 18px;
+		font-size: 12px;
+		line-height: 14px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 18px;
+			line-height: 24px;
+		}
 	}
 
 	&__features-item {
-		padding: 20px 0;
+		padding: 13px 0;
 		position: relative;
+		@media (min-width: $breakpoint1920) {
+			padding: 20px 0;
+		}
 		&::before {
 			content: '';
 			position: absolute;
@@ -107,62 +149,97 @@
 	text-align: center;
 	&:last-child {
 		.plan-card__title-chip {
-			padding: 4px 43px;
+			padding: 0 33px;
 			background: linear-gradient(90deg, #2095D9 0%, #5C35EE 100%);
+			@media (min-width: $breakpoint1920) {
+				padding: 4px 43px;
+			}
 		}
 	}
 	&__title {
 		font-weight: 900;
 		text-transform: uppercase;
-		margin-bottom: 47px;
+		margin-bottom: 30px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 47px;
+		}
 	}
 
 	&__title-title {
-		font-size: 40px;
+		font-size: 30px;
 		margin-bottom: 10px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 40px;
+		}
 	}
 
 	&__title-chip {
-		font-size: 16px;
+		font-size: 12px;
 		line-height: 19px;
 		display: inline-block;
-		padding: 4px 19px;
+		padding: 0 16px;
 		background: rgba(255, 255, 255, 0.3);
 		border-radius: 50px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 16px;
+			padding: 4px 19px;
+		}
 	}
 
 	&__price {
-		margin-bottom: 65px;
+		margin-bottom: 32px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 65px;
+		}
 	}
 
 	&__price-price {
 		font-family: Montserrat;
 		font-weight: 700;
-		font-size: 50px;
-		margin-bottom: 10px;
+		font-size: 40px;
+		line-height: 48px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 50px;
+			line-height: 61px;
+		}
 		sup {
-			font-size: 24px;
+			font-size: 16px;
 			font-weight: 400;
+			@media (min-width: $breakpoint1920) {
+				font-size: 24px;
+			}
 		}
 	}
 
 	&__price-month {
 		font-weight: 900;
-		font-size: 20px;
+		font-size: 16px;
 		text-transform: uppercase;
+		@media (min-width: $breakpoint1920) {
+			font-size: 20px;
+		}
 	}
 
 	&__footer {
-		font-size: 14px;
+		font-size: 12px;
 		line-height: 16px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 14px;
+		}
 		sup {
-			font-size: 12px;
+			font-size: 10px;
 			margin-right: 2px;
+			@media (min-width: $breakpoint1920) {
+				font-size: 12px;
+			}
 		}
 		span {
 			font-weight: 500;
-			font-size: 18px;
+			font-size: 14px;
 			margin-right: 5px;
+			@media (min-width: $breakpoint1920) {
+				font-size: 18px;
+			}
 		}
 	}
 }
