--- a/src/scss/_unlimited.scss
+++ b/src/scss/_unlimited.scss
@@ -1,32 +1,54 @@
 .unlimited {
-	padding-top: 163px;
-	padding-bottom: 60px;
+	padding-top: 45px;
+	padding-bottom: 30px;
 	color: $white-color;
+	@media (min-width: $breakpoint1920) {
+		padding-top: 163px;
+		padding-bottom: 60px;
+	}
 	&__title {
 		text-align: center;
-		margin-bottom: 60px;
+		margin-bottom: 40px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 60px;
+		}
 	}
 
 	&__title-title {
-		margin-bottom: 20px;
+		margin-bottom: 5px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__title-note {
+		font-size: 16px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 24px;
+		}
 	}
 
 	&__wrap {
-		max-width: 1020px;
+		max-width: 730px;
 		margin: 0 auto;
 		position: relative;
+		@media (min-width: $breakpoint1920) {
+			max-width: 1020px;
+		}
 	}
 
 	&__right-border {
 		position: absolute;
-		top: -42px;
-		right: -145px;
+		top: -20px;
+		right: -95px;
 		z-index: 2;
-		max-width: 277px;
+		max-width: 199px;
 		pointer-events: none;
+		@media (min-width: $breakpoint1920) {
+			max-width: 277px;
+			top: -42px;
+			right: -145px;
+		}
 		img {
 			width: 100%;
 			height: auto;
@@ -37,32 +59,43 @@
 		position: relative;
 		overflow: hidden;
 		list-style: none;
-		padding-top: 64px;
+		padding-top: 46px;
 		z-index: 1;
 		max-width: 1020px;
 		width: 100%;
-		min-height: 471px;
+		min-height: 341px;
 		border-width: 1px;
 		border-style: solid;
 		border-image: 
 			linear-gradient(
 				180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%
 			) 1 1 0;
+			@media (min-width: $breakpoint1920) {
+				padding-top: 64px;
+				min-height: 471px;
+			}
 	}
 
 	&__footer {
-		padding: 46px 0;
+		padding: 24px 0;
 		background: linear-gradient(90deg, rgba(255, 255, 255, 0) 1.37%, rgba(255, 255, 255, 0.09) 50.85%, rgba(255, 255, 255, 0) 100%);
+		@media (min-width: $breakpoint1920) {
+			padding: 46px 0;
+		}
 	}
 
 	&__footer-list {
 		font-family: Montserrat;
 		font-weight: 700;
-		max-width: 1200px;
-		font-size: 20px;
+		max-width: 865px;
+		font-size: 14px;
 		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
+		@media (min-width: $breakpoint1920) {
+			max-width: 1200px;
+			font-size: 20px;
+		}
 	}
 
 	&__footer-item {
@@ -72,6 +105,46 @@
 
 	&__footer-item-img {
 		margin-right: 25px;
+		&--win {
+			svg {
+				width: 50px;
+				height: 50px;
+				@media (min-width: $breakpoint1920) {
+					width: 67px;
+					height: 67px;
+				}
+			}
+		}
+		&--apple {
+			svg {
+				width: 42px;
+				height: 50px;
+				@media (min-width: $breakpoint1920) {
+					width: 57px;
+					height: 68px;
+				}
+			}
+		}
+		&--linux {
+			svg {
+				width: 48px;
+				height: 50px;
+				@media (min-width: $breakpoint1920) {
+					width: 66px;
+					height: 68px;
+				}
+			}
+		}
+		&--android {
+			svg {
+				width: 42px;
+				height: 50px;
+				@media (min-width: $breakpoint1920) {
+					width: 58px;
+					height: 68px;
+				}
+			}
+		}
 	}
 
 	&__footer-item-txt {
@@ -90,20 +163,32 @@
 }
 
 .swiper-slide {
-	padding: 55px 60px 0;
+	padding: 40px 43px 0;
+	@media (min-width: $breakpoint1920) {
+		padding: 55px 60px 0;
+	}
 	&__container {
 		display: flex;
-		margin-bottom: 31px;
+		margin-bottom: 20px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 31px;
+		}
 	}
 
 	&__container-img-wrap {
-		margin-right: 30px;
+		margin-right: 20px;
 		display: flex;
 		align-items: center;
+		@media (min-width: $breakpoint1920) {
+			margin-right: 30px;
+		}
 	}
 
 	&__container-img {
-		max-width: 428px;
+		max-width: 308px;
+		@media (min-width: $breakpoint1920) {
+			max-width: 428px;
+		}
 		img {
 			width: 100%;
 			height: auto;
@@ -118,11 +203,16 @@
 
 	&__container-item {
 		font-weight: 700;
-		font-size: 18px;
-		line-height: 21px;
-		margin-bottom: 25px;
+		font-size: 12px;
+		line-height: 14px;
+		margin-bottom: 15px;
 		display: flex;
 		align-items: center;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 25px;
+			font-size: 18px;
+			line-height: 21px;
+		}
 		&:last-child {
 			margin-bottom: 0;
 		}
@@ -130,11 +220,16 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			width: 28px;
-			height: 28px;
-			margin-right: 14px;
+			width: 20px;
+			height: 20px;
+			margin-right: 10px;
 			border-radius: 50%;
 			background: linear-gradient(90deg, #2095D9 0%, #5C35EE 100%);
+			@media (min-width: $breakpoint1920) {
+				width: 28px;
+				height: 28px;
+				margin-right: 14px;
+			}
 		}
 	}
 
@@ -171,16 +266,21 @@
 }
 
 .swiper-pagination-bullet {
-	padding: 5px 10px;
 	border-radius: 0;
 	width: auto;
-	height: 64px;
-	line-height: 30px;
+	height: 46px;
+	font-size: 14px;
+	line-height: 17px;
 	color:#9B99AD;
 	opacity: 1;
 	background: transparent;
 	display: flex;
 	align-items: center;
+	@media (min-width: $breakpoint1920) {
+		height: 64px;
+		font-size: 20px;
+		line-height: 30px;
+	}
 }
 .swiper-pagination-bullet-active {
 	color:#fff;
