--- a/src/scss/_partners.scss
+++ b/src/scss/_partners.scss
@@ -6,8 +6,11 @@
 		padding-bottom: 125px;
 	}
 	&__title {
-		margin-bottom: 70px;
+		margin-bottom: 40px;
 		text-align: center;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 70px;
+		}
 	}
 
 	&__companies {
@@ -17,12 +20,18 @@
 		grid-column-gap: 60px;
 		align-items: center;
 		justify-items: center;
-		max-width: 1000px;
+		max-width: 662px;
 		margin: 0 auto;
+		@media (min-width: $breakpoint1920) {
+			max-width: 1000px;
+		}
 	}
 
 	&__companies-intel {
-		max-width: 158px;
+		max-width: 93px;
+		@media (min-width: $breakpoint1920) {
+			max-width: 158px;
+		}
 		svg {
 			width: 100%;
 			height: auto;
@@ -30,7 +39,10 @@
 	}
 
 	&__companies-asus {
-		max-width: 175px;
+		max-width: 102px;
+		@media (min-width: $breakpoint1920) {
+			max-width: 175px;
+		}
 		svg {
 			width: 100%;
 			height: auto;
@@ -38,7 +50,10 @@
 	}
 
 	&__companies-invidia {
-		max-width: 275px;
+		max-width: 161px;
+		@media (min-width: $breakpoint1920) {
+			max-width: 275px;
+		}
 		svg {
 			width: 100%;
 			height: auto;
@@ -46,7 +61,10 @@
 	}
 
 	&__companies-binb {
-		max-width: 217px;
+		max-width: 127px;
+		@media (min-width: $breakpoint1920) {
+			max-width: 217px;
+		}
 		svg {
 			width: 100%;
 			height: auto;
