--- a/src/scss/_begin.scss
+++ b/src/scss/_begin.scss
@@ -7,16 +7,26 @@
 	}
 	&__inner {
 		display: flex;
-		align-items: center;
+		flex-direction: column;
+		@media (min-width: $breakpoint1310) {
+			flex-direction: row;
+			align-items: center;
+		}
 	}
 
 	&__content {
-		flex: 0 0 42%;
+		flex: 1 1 100%;
+		@media (min-width: $breakpoint1310) {
+			flex: 0 0 42%;
+		}
 	}
 
 	&__title {
-		margin-right: -30px;
+		margin-right: 0;
 		margin-bottom: 40px;
+		@media (min-width: $breakpoint1310) {
+			margin-right: -30px;
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-right: -150px;
 			margin-bottom: 63px;
@@ -58,11 +68,23 @@
 	}
 
 	&__box {
-		flex: 0 0 58%;
+		flex: 1 1 100%;
+		@media (min-width: $breakpoint1310) {
+			flex: 0 0 58%;
+		}
 	}
 
 	&__image {
-		max-width: 1005px;
+		max-width: 700px;
+		margin-left: auto;
+		margin-right: -85px;
+		margin-top: -100px;
+		@media (min-width: $breakpoint1310) {
+			max-width: 1005px;
+			margin-left: 0;
+			margin-right: 0;
+			margin-top: 0;
+		}
 		img {
 			width: 100%;
 			height: auto;
