--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -59,8 +59,11 @@
 	&__icon {
 		display: inline-block;
 		font-size: 12px;
-		margin-right: 15px;
+		margin-right: 10px;
 		line-height: 1;
+		@media (min-width: $breakpoint1920) {
+			margin-right: 15px;
+		}
 		&:last-child {
 			margin-right: 0;
 		}
