--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -20,13 +20,15 @@ body {
 .container {
   padding: 0 15px;
 	width: 100%;
-	@media (min-width: $breakpoint576) {
-		max-width: 540px;
-    margin: 0 auto;
-		padding: 0;
-	}
+	// @media (min-width: $breakpoint576) {
+	// 	max-width: 540px;
+  //   margin: 0 auto;
+	// 	padding: 0;
+	// }
 	@media (min-width: $breakpoint768) {
-		max-width: 720px;	
+		max-width: 720px;
+		margin: 0 auto;
+		padding: 0;
 	}
 	@media (min-width: $breakpoint1310) {
 		max-width: 1140px;
@@ -95,10 +97,10 @@ body {
 	font-family: Montserrat;
 	font-weight: 800;
 	color: $white-color;
-	font-size: 28px;
-	line-height: 34px;
+	font-size: 26px;
+	line-height: 32px;
 	text-transform: uppercase;
-	@media (min-width: $breakpoint1310) {
+	@media (min-width: $breakpoint768) {
 		font-size: 50px;
 		line-height: 61px;
 	}
@@ -155,9 +157,12 @@ body {
 .btn-with-icon {
 	display: inline-flex;
 	position: relative;
-	padding: 10px 28px;
+	padding: 10px 18px;
 	cursor: pointer;
 	border-radius: 5px;
+	@media (min-width: $breakpoint1310) {
+		padding: 10px 28px;
+	}
 	// @media (min-width: $breakpoint1920) {
 	// 	padding: 17px 55px;
 	// }
@@ -199,5 +204,12 @@ body {
 			line-height: 19px;
 			font-weight: 700;
 		}
+	}
+}
+
+.mr-md-auto {
+	margin-right: auto;
+	@media (min-width: $breakpoint1310) {
+		margin-right: 0;
 	}
 }
