--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -18,6 +18,7 @@
 	&__navigation {
 		display: flex;
 		align-items: center;
+		flex-grow: 1;
 	}
 
 	&__logo {
@@ -31,10 +32,13 @@
 	}
 
 	&__list {
-		display: flex;
+		display: none;
 		padding-left: 5px;
 		font-size: 14px;
 		line-height: 17px;
+		@media (min-width: $breakpoint1310) {
+			display: flex;
+		}
 	}
 
 	&__item {
@@ -87,9 +91,82 @@ nav {
 	top: 0;
 	left: 0;
 	right: 0;
+	height: auto;
 	padding: 0 30px;
+	transition: all .3s ease;
+	&.show {
+		height: 100%;
+		background: #23272F;
+		background: linear-gradient(180deg, rgba(35,39,47,1) 70%, rgba(0,0,0,.5) 70%);
+		backdrop-filter: blur(20px);
+		// for burger munu <= 768
+		.header__navbar {
+		}
+		.header__navigation {}
+		.header__buttons {}
+		.header__list {
+			display: block;
+			position: absolute;
+			top: 80px;
+			left: 0;
+			padding-left: 30px;
+		}
+		.header__item {
+			margin-bottom: 33px;
+			margin-left: 0;
+		}
+	}
 }
 
 .burger {
-	display: none;
+	display: block;
+	margin-left: 19px;
+	position: relative;
+	width: 31px;
+	height: 22px;
+	cursor: pointer;
+	transition: all .3s ease;
+	&::before, &::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 50%;
+		height: 4px;
+		background: $white-color;
+		border-radius: 4px;
+		transition: all .3s ease;
+	}
+	&::after {
+		top: auto;
+		bottom: 0;
+		width: 70%;
+	}
+	span {
+		position: absolute;
+		width: 100%;
+		height: 4px;
+		border-radius: 4px;
+		background: $white-color;
+		left: 0;
+		top: 50%;
+		opacity: 1;
+		transform: translateY(-50%);
+	}
+	&.active {
+		&::before, &::after {
+			top: 9px;
+			width: 100%;
+			transform: rotate(45deg);
+		}
+		&::after {
+			transform: rotate(-45deg);
+		}
+		span {
+			opacity: 0;
+		}
+	}
+	@media (min-width: $breakpoint1310) {
+		display: none;
+	}
 }
