--- a/src/scss/_plan.scss
+++ b/src/scss/_plan.scss
@@ -1,13 +1,19 @@
 .plan {
 	position: relative;
-	padding: 93px 0 90px 0;
+	padding: 65px 0 70px 0;
 	color: $white-color;
+	@media (min-width: $breakpoint1310) {
+		padding: 93px 0 90px 0;
+	}
 	@media (min-width: $breakpoint1920) {
 		padding: 160px 0 140px 0;
 	}
 	&__title {
 		text-align: center;
-		margin-bottom: 40px;
+		margin-bottom: 85px;
+		@media (min-width: $breakpoint1310) {
+			margin-bottom: 40px;
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-bottom: 60px;
 		}
@@ -58,6 +64,10 @@
 	&__service {
 		text-align: center;
 		margin-top: 42px;
+		display: none;
+		@media (min-width: $breakpoint1310) {
+			display: block;
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-top: 25px;
 		}
@@ -81,25 +91,37 @@
 	}
 
 	&__core {
-		position: absolute;
-		top: 0;
-		left: 0;
+		position: static;
+		margin-top: 105px;
 		height: 100%;
-		max-width: 24%;
+		max-width: 100%;
 		width: 100%;
-		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 100%);
+		background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 100%);
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		@media (min-width: $breakpoint1310) {
+			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 100%);
+			position: absolute;
+			top: 0;
+			left: 0;
+			max-width: 24%;
+			margin-top: 0;
+		}
 		@media (min-width: $breakpoint1920) {
 			max-width: 28%;
 		}
 	}
 
 	&__features {
-		max-width: 260px;
+		max-width: 390px;
 		margin: 0 auto;
+		padding: 41px 0 50px;
 		font-family: Montserrat;
+		@media (min-width: $breakpoint1310) {
+			min-width: 260px;
+			padding: 0;
+		}
 		@media (min-width: $breakpoint1920) {
 			max-width: 390px;
 		}
