--- a/src/scss/_gaming.scss
+++ b/src/scss/_gaming.scss
@@ -1,6 +1,9 @@
 .gaming {
-	padding: 65px 0 90px 0;
+	padding: 35px 0 45px 0;
 	color: $white-color;
+	@media (min-width: $breakpoint768) {
+		padding: 65px 0 90px 0;
+	}
 	@media (min-width: $breakpoint1310) {
 		padding: 80px 0 100px 0;
 	}
@@ -9,7 +12,10 @@
 	}
 	&__title {
 		text-align: center;
-		margin-bottom: 80px;
+		margin-bottom: 54px;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 80px;
+		}
 		@media (min-width: $breakpoint1310) {
 			margin-bottom: 40px;
 		}
@@ -21,9 +27,14 @@
 	&__cards {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
-		justify-items: center;
-		grid-row-gap: 85px;
-		margin-bottom: 80px;
+		justify-items: stretch;
+		grid-row-gap: 33px;
+		margin-bottom: 50px;
+		@media (min-width: $breakpoint768) {
+			justify-items: center;
+			grid-row-gap: 85px;
+			margin-bottom: 80px;
+		}
 		@media (min-width: $breakpoint1310) {
 			grid-template-columns: repeat(3, 1fr);
 			grid-column-gap: 120px;
@@ -40,6 +51,24 @@
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		&:first-child {
+			grid-area: 1 / 1 / 2 / 2;
+			@media (min-width: $breakpoint1310) {
+
+			}
+		}
+		&:nth-child(2) {
+			grid-area: 3 / 1 / 4 / 2;
+			@media (min-width: $breakpoint1310) {
+				grid-area: 1 / 2 / 2 / 3;
+			}
+		}
+		&:nth-child(3) {
+			grid-area: 2 / 1 / 3 / 2;
+			@media (min-width: $breakpoint1310) {
+				grid-area: 1 / 3 / 2 / 4;
+			}
+		}
 		@media (min-width: $breakpoint1310) {
 			flex-direction: column;
 			align-items: flex-start;
@@ -47,10 +76,16 @@
 	}
 
 	&__image {
-		max-width: 170px;
-		max-height: 116px;
+		max-width: 79px;
+		width: 100%;
+		max-height: 50px;
 		text-align: center;
-		margin: 0 44px 0 0;
+		margin: 0 10px 0 0;
+		@media (min-width: $breakpoint768) {
+			max-width: 170px;
+			max-height: 116px;
+			margin: 0 44px 0 0;
+		}
 		@media (min-width: $breakpoint1310) {
 			margin: 0 auto 32px;
 			max-width: 183px;
@@ -62,7 +97,10 @@
 		}
 		img {
 			width: 100%;
-			height: 116px;
+			height: 50px;
+			@media (min-width: $breakpoint768) {
+				height: 116px;
+			}
 			@media (min-width: $breakpoint1920) {
 				height: 140px;
 			}
@@ -79,9 +117,13 @@
 	&__content-title {
 		font-family: Montserrat;
 		font-weight: 700;
-		font-size: 24px;
+		font-size: 14px;
 		line-height: 29px;
-		margin-bottom: 15px;
+		margin-bottom: 0;
+		@media (min-width: $breakpoint768) {
+			font-size: 24px;
+			margin-bottom: 15px;
+		}
 		@media (min-width: $breakpoint1920) {
 			font-size: 36px;
 			line-height: 44px;
@@ -96,9 +138,16 @@
 	&__note {
 		font-family: Amiko;
 		font-weight: 700;
-		font-size: 18px;
+		font-size: 16px;
 		text-align: center;
-		margin-bottom: 20px;
+		margin-bottom: 30px;
+		line-height: 21px;
+		letter-spacing: 1px;
+		@media (min-width: $breakpoint768) {
+			font-size: 18px;
+			margin-bottom: 20px;
+			letter-spacing: normal;
+		}
 		@media (min-width: $breakpoint1920) {
 			font-size: 24px;
 			margin-bottom: 30px;
