--- a/src/scss/_power.scss
+++ b/src/scss/_power.scss
@@ -1,13 +1,20 @@
 .power {
-	padding-bottom: 60px;
-	padding-top: 60px;
+	padding-bottom: 35px;
+	padding-top: 35px;
+	@media (min-width: $breakpoint768) {
+		padding-bottom: 60px;
+		padding-top: 60px;
+	}
 	@media (min-width: $breakpoint1920) {
 		padding-bottom: 150px;
 		padding-top: 160px;
 	}
 	&__title {
-		margin-bottom: 50px;
+		margin-bottom: 2px;
 		text-align: center;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 50px;
+		}
 		@media (min-width: $breakpoint1310) {
 			margin-bottom: 80px;
 		}
@@ -61,7 +68,10 @@
 	&__list {
 		width: 100%;
 		max-width: 100%;
-		margin-top: 40px;
+		margin-top: 10px;
+		@media (min-width: $breakpoint768) {
+			margin-top: 40px;
+		}
 		@media (min-width: $breakpoint1310) {
 			max-width: 580px;
 			width: 50%;
@@ -73,13 +83,26 @@
 	}
 
 	&__item {
-		padding-left: 130px;
+		padding-left: 62px;
 		color: $white-color;
 		position: relative;
-		margin-bottom: 50px;
+		margin-bottom: 18px;
+		@media (min-width: $breakpoint768) {
+			padding-left: 130px;
+			margin-bottom: 50px;
+		}
 		@media (min-width: $breakpoint1920) {
 			padding-left: 150px;
 			margin-bottom: 60px;
+		}
+		&:first-child {
+			margin-bottom: 28px;
+			@media (min-width: $breakpoint768) {
+				margin-bottom: 50px;
+			}
+			@media (min-width: $breakpoint1920) {
+				margin-bottom: 60px;
+			}
 		}
 		&:last-child {
 			margin-bottom: 0px;
@@ -89,9 +112,13 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 100px;
-			height: 67px;
+			width: 45px;
+			height: 31px;
 			background: url('@img/power_devices.svg') 0 0/cover no-repeat;
+			@media (min-width: $breakpoint768) {
+				width: 100px;
+				height: 67px;
+			}
 			@media (min-width: $breakpoint1920) {
 				width: 120px;
 				height: 85px;
@@ -118,9 +145,14 @@
 	&__item-title {
 		font-family: Montserrat;
 		font-weight: 700;
-		font-size: 24px;
-		line-height: 29px;
-		margin-bottom: 15px;
+		font-size: 14px;
+		line-height: 16px;
+		margin-bottom: 10px;
+		@media (min-width: $breakpoint768) {
+			font-size: 24px;
+			line-height: 29px;
+			margin-bottom: 15px;
+		}
 		@media (min-width: $breakpoint1920) {
 			font-size: 36px;
 			line-height: 44px;
@@ -136,7 +168,16 @@
 .content {
 
 	&__platform {
-		margin-top: 15px;
+		margin-top: 10px;
+		max-width: 114px;
+		@media (min-width: $breakpoint768) {
+			margin-top: 15px;
+			max-width: 229px;
+		}
+		svg {
+			width: 100%;
+			height: auto
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-top: 22px;
 		}
